[package]
name = "fht-share-picker"
version = "0.1.0"
edition = "2021"
description = "A Wayland XDG screencast output picker"
authors = ["Nadjib Ferhat <nferhat20@gmail.com>"]
license = "GPL-3.0"
edition = "2021"
repository = "https://github.com/nferhat/fht-share-picker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.smithay-client-toolkit]
git = "https://github.com/Smithay/client-toolkit"
version = "0.19.1"

[dependencies.iced]
git = "https://github.com/iced-rs/iced"
version = "0.13.0-dev"
features = ["canvas"]

[profile.opt]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.dev]
opt-level = 3
